syntax = "proto3";

option csharp_namespace = "ReservationAuthServer.GRPC";

service UserGRPCService {
    rpc FindUserByName (FindUserByNameRequest) returns (UserResponse);
}

message FindUserByNameRequest {
    string username = 1;
}

message UserResponse {
    int32 id = 1;
    string firstname = 2;
    string lastname = 3;
    string username = 4;
}
